# rustynail

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  config.yaml.example  docker-compose.yml  test-health.sh
.github/workflows/: ci.yml  docker.yml
benches/: gateway_benchmarks.rs
configs/: harness.yaml
deploy/grafana/: dashboard.json
deploy/grafana/provisioning/dashboards/: rustynail.yml
deploy/helm/rustynail/: Chart.yaml  values.yaml
deploy/helm/rustynail/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
deploy/prometheus/: alerts.yaml
skills/formatting/: SKILL.md
skills/rustynail-assistant/: SKILL.md
src/: lib.rs  main.rs  types.rs
src/agents/: fallback.rs  manager.rs  mod.rs  stub.rs
src/audit/: mod.rs
src/channels/: channel.rs  discord.rs  email.rs  mod.rs  slack.rs  slack_socketmode.rs  sms.rs  teams.rs  telegram.rs  telegram_longpoll.rs  testchan.rs  webchat.rs  webhook.rs  whatsapp.rs
src/config/: mod.rs
src/cron/: mod.rs  scheduler.rs
src/gateway/: chunker.rs  dashboard.html  dashboard.rs  deduplicator.rs  formatter.rs  http.rs  mod.rs  openai_compat.rs  rate_limiter.rs  user_prefs.rs
src/memory/: mod.rs  postgres.rs  redis.rs  sqlite.rs  summarizer.rs  vector.rs
src/skills/: mod.rs
src/tools/: calculator.rs  calendar.rs  filesystem.rs  formatter.rs  image.rs  mod.rs  pdf.rs  shell.rs  web_fetch.rs  web_search.rs
tests/: admin_api.rs  dashboard.rs  http_endpoints.rs  message_flow.rs  pipeline.rs  teams_webhook.rs  user_prefs.rs  webhooks.rs
tests/common/: mod.rs
tests/fixtures/: test_config.yaml
tests/harness/: harness_test.rs
