[package]
name = "rustynail"
version = "0.3.0"
edition = "2021"
authors = ["Scott Friedman <scttfrdmn@users.noreply.github.com>"]
description = "RustyNail - High-performance AI assistant built with Rust and Agenkit"
license = "Apache-2.0"
repository = "https://github.com/scttfrdmn/rustynail"
homepage = "https://github.com/scttfrdmn/rustynail"
keywords = ["ai", "assistant", "discord", "claude", "agenkit"]
categories = ["command-line-utilities", "web-programming"]
readme = "README.md"

[dependencies]
# Agenkit - local path to Rust implementation
agenkit = { path = "../agenkit/agenkit-rust" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Discord integration
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# HTTP client (WhatsApp API)
reqwest = { version = "0.11", features = ["json"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Slack signature verification
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# OpenTelemetry (pin to agenkit's versions to avoid duplicate crates)
opentelemetry = { version = "0.23", features = ["trace"] }
opentelemetry_sdk = { version = "0.23", features = ["trace", "rt-tokio"] }
tracing-opentelemetry = "0.24"
opentelemetry-otlp = { version = "0.16", features = ["trace", "grpc-tonic"] }

[dev-dependencies]
mockall = "0.12"
tempfile = "3"
mockito = "1.2"

[[bin]]
name = "rustynail"
path = "src/main.rs"
